
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2022 SEP 14a
  * in model/chem/_C2H4_Air_23s/chem.c
    - made modifications to the third body efficiencies
  * in model/chem/_C2H4_Air_23s/doc/report.tex
    - made modifications to the third body efficiencies
  * in model/chem/_C2H4_Air_Plasma_30s/chem.c
    - added Kunnov2009 combustion model
    - added species HCO and HCCO
  * in model/thermo/_generic/enthalpy.c
    - added species HCO and HCCO
  * in model/thermo/_generic/thermo.c
    - added species HCO and HCCO
  * in model/transport/_Dixon-Lewis/transport.c
    - added species HCO and HCCO
  * in model/transport/doc/report.tex
    - changed M for \cal M in a few locations
    - changed D for \cal D in one location
  * in model/chem/_C2H4_Air_Plasma_30s
    - added konnov2009.c and konnov2009.h
    

2022 SEP 12a
  * in tools/chemkin2cfdwarp.c
    - various modifications to be able to handle the Lindemann (HIGH and LOW) reactions
  * in model/fluid/_Navier-Stokes_plasma/fluid_bdry.c
    - added function _Echi() to find the electric field to be used with the Schottky effect
  * in model/share/chem_share.c
    - in add_to_W_*_Lindemann, rewrote kf so that there is no division by kinf to avoid possible
      division by zero
    - in add_to_dW_*_Lindemann, fixed the jacobians
    

2022 SEP 02a
  * in model/chem/_C2H4_Air_Plasma_30s/chem.c
    - added ADJUSTED_N2_TOWNSEND_IONIZATION and ADJUSTED_O2_TOWNSEND_IONIZATION
    - updated the reactions to model/chem/_C2H4_Air_Plasma_30s/from_Igor_v3.txt
  * in model/share/chem_share.c and model/share/chem_share.h
    - fixed a typo in the  units outlined before the *Lindemann* functions
    

2022 AUG 27a
  * in model/share/chem_share.c